z-index fix for FloatingBalloon

--- a/src/Styles/FloatingBalloon.scss
+++ b/src/Styles/FloatingBalloon.scss
@@ -9,6 +9,7 @@
     visibility: hidden;
     bottom: 40px;
     transition: background-color 0.5s ease;
+    z-index: 5;
 
     &:hover {
         background-color: whitesmoke;
